# luaSimpleCanvas

./: .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt
cli/allKeys/: diag1.cpp  diag1.h  main.cpp
cli/major/: main.cpp  maj_arp.cpp  maj_arp.h  major.cpp  major.h
cli/minor/: main.cpp  min_arp.cpp  min_arp.h  minor.cpp  minor.h
gui/: CMakeLists.txt  MyFrame.cpp  MyFrame.h  MyPanel.cpp  MyPanel.h  diag1b.cpp  diag1b.h  main.cpp  main.h
gui/fbp/: MyFrameBase.cpp  MyFrameBase.h  gui.fbp
lib/: common.cpp  common.h  engineHgl.cpp  engineHgl.h  engineWx.cpp  engineWx.h
lua/: CMakeLists.txt  README.md  demo.lua  main.cpp
